@@ -5927,15 +5927,6 @@ SecRule REQUEST_METHOD "!<emphasis>@within %{tx.allowed_methods}</emphasis>" t:l
       being persisted. This keeps counter data consistent even if the counter
       was modified and persisted by another thread/process during the
       transaction.</para>
-
-      <para>Please note that ModSecurity does not implement atomic updates of
-      persistent variables at this time. Variables are read from storage
-      whenever <literal>initcol</literal> is encountered in the rules and
-      persisted at the end of request processing. On busy servers requests
-      often run in parallel, leading to situations where one request
-      overwrites the changes made by another request. We anticipate
-      implementing atomic updates of counter values in a future
-      version.</para>
     </note>
 
     <note>
